--- a/mieszkancy.html
+++ b/mieszkancy.html
@@ -4,11 +4,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 
-<body>
-<div id="strona">
-
-
-
+<body><center>
+<div id="panel_glowny">
+	<div id="panel_mieszkanca">
+		<div id="zdjecie"><img src="user.png"></div>
+		<div id="imie_nazwisko">Mola Li</div>
+	</div>
+		
+	<div id="panel_mieszkanca">
+		<div id="zdjecie"><img src="user.png"></div>
+		<div id="imie_nazwisko">Taki jaki</div>
+	</div>
 
 </div>
 </body>
