--- a/mieszkancy.html
+++ b/mieszkancy.html
@@ -12,7 +12,7 @@
 	</div>
 		
 	<div id="panel_mieszkanca">
-		<div id="zdjecie"><img src="user.png"></div>
+		<div id="zdjecie"><img src="user.jpeg"></div>
 		<div id="imie_nazwisko">Taki jaki</div>
 	</div>
 
