--- a/mieszkancy.html
+++ b/mieszkancy.html
@@ -7,12 +7,14 @@
 <body><center>
 <div id="panel_glowny">
 	<div id="panel_mieszkanca">
-		<div id="zdjecie"><img src="user.png"></div>
+		<div id="zdjecie"><img src="user.jpg" width="250px" height="300px"></div>
 		<div id="imie_nazwisko">Mola Li</div>
 	</div>
 		
+	<div id="pasek"></div>
+	
 	<div id="panel_mieszkanca">
-		<div id="zdjecie"><img src="user.jpeg"></div>
+		<div id="zdjecie"><img src="user.jpg" width="250px" height="300px"></div>
 		<div id="imie_nazwisko">Taki jaki</div>
 	</div>
 
