--- a/admin.html
+++ b/admin.html
@@ -9,11 +9,15 @@
 <div id="strona">
 
  <div id="panel">
-	<div id="przycisk">ddd</div>
-	<div id="przycisk">ddd</div>
-	<div id="przycisk">ddd</div>
-	<div id="przycisk">ddd</div>
-	
+  <div id="panele">
+	<a href="#"><div id="przycisk">Dodaj</div></a>
+	<a href="#"><div id="przycisk2">Edytuj</div></a>
+  </div>
+  <div id="panele">
+	<a href="#"><div id="przycisk3">Wymelduj</div></a>
+	<a href="#"><div id="przycisk4">Powiadom</div></a>
+  </div>
+  
  </div>
 
 </div>
