--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
 
 <body>
 <div id="strona">
-
+ <div id="logo">Panel administracyjny</div>
  <div id="panel">
   <div id="panele">
 	<a href="#"><div id="przycisk">Dodaj</div></a>
