--- a/mieszkancy.html
+++ b/mieszkancy.html
@@ -1,26 +1,44 @@
 ﻿<html>
 <head><title>wAkademiQ</title>
-<link rel="stylesheet" href="mieszkancy.css" type="text/css">
+<link rel="stylesheet" href="style_mieszkaniec.css" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Lato:400,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 
-<body><center>
-<div id="panel_glowny">
-	<div id="panel_mieszkanca">
-		<div id="zdjecie"><img src="user.jpg" width="250px" height="300px"></div>
-		<div id="imie_nazwisko">Mola Li</div>
-	</div>
-		
-	<div id="pasek"></div>
-	
-	<div id="panel_mieszkanca">
-		<div id="zdjecie"><img src="user.jpg" width="250px" height="300px"></div>
-		<div id="imie_nazwisko">Taki jaki</div>
-	</div>
+<body link="yellow" vlink="white" alink="white">
+<div id="strona">
+<center>
 
-	<div id="numer_pokoju">815A
-	</div>
+
+<div id="ramka_mieszkaniec">
+	<div id="mieszkaniec"><br><div id="zdjecie"><img src="zdj.png" width="300px" height="400px"></div>
+	<h1><div id="imie">Darek Tomaszek</div></h1>
+	<div id="status2">Kontakt z <br>Administracją</div>
+</div></div>
+
+<div id="pasek">
+	<div id="pokoj2">815A</div>
+	<div id="pokoj">815A</div>
+	<div id="pokoj2">815A</div>
+	<div id="pokoj2">815A</div>
+	<div id="pokoj2">815A</div>
+	<div id="pokoj2">815A</div>
+	<div id="pokoj2">815A</div>
+	<div id="pokoj2">815A</div>
+
+
 </div>
+<div id="ramka_mieszkaniec">
+	<div id="mieszkaniec"><br><div id="zdjecie"><img src="zdj.png" width="300px" height="400px"></div>
+	<h1><div id="imie">Darek Tomaszek</div></h1>
+	<div id="status">OK</div>
+</div></div>
+
+
+
+
+</div>
+
 </body>
 </html>
 
