--- a/wyszukaj.html
+++ b/wyszukaj.html
@@ -10,9 +10,9 @@
 
 <div id="gora">
 	<div id="bloki">
-		<div id="blok"></div>
-		<div id="blok"></div>
-		<div id="blok"></div>
+		<div id="blok"><br><img src="klucz.png" width="70%" height="70%"><br><br>1. wybierz klucz</div>
+		<div id="blok"><br><img src="skaner.png" width="70%" height="70%"><br><br>2. zeskanuj kod</div>
+		<div id="blok"><br><img src="ok.png" width="70%" height="70%"><br><br>3. zweryfikuj mieszkańca</div>
 </div></div>
 
 
