--- a/wyszukaj.html
+++ b/wyszukaj.html
@@ -8,7 +8,7 @@
 <body>
 <div id="strona">
 
-<div id="gora">
+<div id="gora">Weryfikuj automatycznie
 	<div id="bloki">
 		<div id="blok"><br><img src="klucz.png" width="70%" height="70%"><br><br>1. wybierz klucz</div>
 		<div id="blok"><br><img src="skaner.png" width="70%" height="70%"><br><br>2. zeskanuj kod</div>
@@ -16,8 +16,12 @@
 </div></div>
 
 
-<div id="dol">
-	<div id="wyszukaj"></div>
+<div id="dol"><br>Weryfikuj ręcznie<br>
+	<div id="wyszukaj">
+		<div id="szukaj_pasek"><input type="text" name="wyszukaj" value="Wyszukaj mieszkańca" /></div>
+		<div id="lupa"> <img src="lupa.png" width="80%" height="80%"></div>
+	
+	</div>
 </div>
 
 
