--- a/wyszukaj.html
+++ b/wyszukaj.html
@@ -7,7 +7,7 @@
 
 <body>
 <div id="strona">
-
+<div id="lo">
 <div id="gora">Weryfikuj automatycznie
 	<div id="bloki">
 		<div id="blok"><br><img src="klucz.png" width="70%" height="70%"><br><br>1. wybierz klucz</div>
@@ -16,7 +16,7 @@
 </div></div>
 
 
-<div id="dol"><br>Weryfikuj ręcznie<br>
+<div id="dol"><br><br><br>Weryfikuj ręcznie<br>
 	<div id="wyszukaj">
 		<div id="szukaj_pasek"><input type="text" name="wyszukaj" value="Wyszukaj mieszkańca" /></div>
 		<div id="lupa"> <img src="lupa.png" width="80%" height="80%"></div>
