--- a/start.html
+++ b/start.html
@@ -3,11 +3,16 @@
 <link rel="stylesheet" href="start.css" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Lato:400,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="Shortcut icon" href="favicon.ico" />
 </head>
 
 <body>
 <div id="strona">
 	<video src="tlo.mp4" class="video" autoplay ></video>
+	<div id="zegar-data">
+		<div id="zegar"></div>
+		<div id="data"></div>
+	</div>
 	<div id="witaj"><h1>Witaj w AkademiQu :)</h1></div>
 	
 	<a href="#"><div class="przycisk">Odblokuj </div></a>
