--- a/start.html
+++ b/start.html
@@ -10,10 +10,10 @@
 <div id="strona">
 	<video src="tlo.mp4" class="video" autoplay ></video>
 	<div id="zegar-data">
-		<div id="zegar"></div>
-		<div id="data"></div>
+		<div id="zegar">55:55:55</div>
+		<div id="data">27.04.2017</div>
 	</div>
-	<div id="witaj"><h1>Witaj w AkademiQu :)</h1></div>
+	<div id="witaj"><br><h1>Witaj w AkademiQu :)</h1></div>
 	
 	<a href="#"><div class="przycisk">Odblokuj </div></a>
 
