--- a/start.html
+++ b/start.html
@@ -1,23 +1,65 @@
-﻿<html>
+<HTML>
 <head><title>wAkademiQ</title>
 <link rel="stylesheet" href="start.css" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Lato:400,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="Shortcut icon" href="favicon.ico" />
 </head>
+<SCRIPT LANGUAGE= "JavaScript" type= "text/javascript">
+function wyswietlDane()
+{
+  var data = new Date();
+  var godziny = data.getHours();
+  var minuty = data.getMinutes();
+  var sekundy = data.getSeconds();
+  var czas = godziny;
+  czas += ((minuty < 10) ? ":0" : ":") + minuty;
+  czas += ((sekundy < 10) ? ":0" : ":") + sekundy;
+  var miesiac = data.getMonth() + 1;
+  if (miesiac < 9){
+    miesiac = "0" + miesiac;
+  }
+  var dzien = data.getDate();
+  if (dzien < 9){
+    dzien = "0" + dzien;
+  }
+  var rok = data.getYear();
+  if (rok < 1000){
+    rok = 2000 + rok - 100;
+  }
+  var dzisiaj = dzien + "." + miesiac + "." + rok;
 
-<body>
+  var dzienTygodnia = data.getDay();
+  switch(dzienTygodnia){
+    case 0: dzienTygodnia = "niedziela"; break;
+    case 1: dzienTygodnia = "poniedziałek"; break;
+    case 2: dzienTygodnia = "wtorek"; break;
+    case 3: dzienTygodnia = "Środa"; break;
+    case 4: dzienTygodnia = "czwartek"; break;
+    case 5: dzienTygodnia = "piątek"; break;
+    case 6: dzienTygodnia = "sobota"; break;
+  }
+
+  var tekst = "Dziś jest " + dzienTygodnia + ", " + dzisiaj;
+  tekst += "<BR>";
+  tekst += czas;
+  document.getElementById("dataLayer").innerHTML = tekst;
+  timerID = setTimeout("wyswietlDane()",1000);
+}
+</SCRIPT>
+</HEAD>
+<BODY onLoad="wyswietlDane()">
+<DIV ID="dataLayer"
+
+>
+</DIV>
 <div id="strona">
+
 	<video src="tlo.mp4" class="video" autoplay ></video>
-	<div id="zegar-data">
-		<div id="zegar">55:55:55</div>
-		<div id="data">27.04.2017</div>
-	</div>
-	<div id="witaj"><br><h1>Witaj w AkademiQu :)</h1></div>
+	<div id="witaj"><h1>Witaj w AkademiQu :)</h1></div>
 	
 	<a href="#"><div class="przycisk">Odblokuj </div></a>
 
 </div>
-</body>
-</html>
+</BODY>
+</HTML>
 
