--- a/start.html
+++ b/start.html
@@ -30,7 +30,7 @@ function wyswietlDane()
 
   var dzienTygodnia = data.getDay();
   switch(dzienTygodnia){
-    case 0: dzienTygodnia = "niedziela"; break;
+    case 0: dzienTygodnia = "Niedziela"; break;
     case 1: dzienTygodnia = "poniedziałek"; break;
     case 2: dzienTygodnia = "wtorek"; break;
     case 3: dzienTygodnia = "Środa"; break;
