--- a/start.html
+++ b/start.html
@@ -31,7 +31,7 @@ function wyswietlDane()
   var dzienTygodnia = data.getDay();
   switch(dzienTygodnia){
     case 0: dzienTygodnia = "Niedziela"; break;
-    case 1: dzienTygodnia = "poniedziałek"; break;
+    case 1: dzienTygodnia = "Poniedziałek"; break;
     case 2: dzienTygodnia = "wtorek"; break;
     case 3: dzienTygodnia = "Środa"; break;
     case 4: dzienTygodnia = "czwartek"; break;
