--- a/start.html
+++ b/start.html
@@ -32,7 +32,7 @@ function wyswietlDane()
   switch(dzienTygodnia){
     case 0: dzienTygodnia = "Niedziela"; break;
     case 1: dzienTygodnia = "Poniedziałek"; break;
-    case 2: dzienTygodnia = "wtorek"; break;
+    case 2: dzienTygodnia = "Wtorek"; break;
     case 3: dzienTygodnia = "Środa"; break;
     case 4: dzienTygodnia = "czwartek"; break;
     case 5: dzienTygodnia = "piątek"; break;
