--- a/start.html
+++ b/start.html
@@ -34,7 +34,7 @@ function wyswietlDane()
     case 1: dzienTygodnia = "Poniedziałek"; break;
     case 2: dzienTygodnia = "Wtorek"; break;
     case 3: dzienTygodnia = "Środa"; break;
-    case 4: dzienTygodnia = "czwartek"; break;
+    case 4: dzienTygodnia = "Czwartek"; break;
     case 5: dzienTygodnia = "piątek"; break;
     case 6: dzienTygodnia = "sobota"; break;
   }
