--- a/start.html
+++ b/start.html
@@ -35,7 +35,7 @@ function wyswietlDane()
     case 2: dzienTygodnia = "Wtorek"; break;
     case 3: dzienTygodnia = "Środa"; break;
     case 4: dzienTygodnia = "Czwartek"; break;
-    case 5: dzienTygodnia = "piątek"; break;
+    case 5: dzienTygodnia = "Piątek"; break;
     case 6: dzienTygodnia = "sobota"; break;
   }
 
