--- a/start.html
+++ b/start.html
@@ -36,7 +36,7 @@ function wyswietlDane()
     case 3: dzienTygodnia = "Środa"; break;
     case 4: dzienTygodnia = "Czwartek"; break;
     case 5: dzienTygodnia = "Piątek"; break;
-    case 6: dzienTygodnia = "sobota"; break;
+    case 6: dzienTygodnia = "Sobota"; break;
   }
 
   var tekst = "Dziś jest " + dzienTygodnia + ", " + dzisiaj;
