--- a/start.html
+++ b/start.html
@@ -54,7 +54,7 @@ function wyswietlDane()
 </DIV>
 <div id="strona">
 
-	<video src="tlo.mp4" class="video" autoplay ></video>
+	<video src="tlo.mp4" loop="true" class="video" autoplay ></video>
 	<div id="witaj"><h1>Witaj w AkademiQu :)</h1></div>
 	
 	<a href="#"><div class="przycisk">Odblokuj </div></a>
