--- a/ekran_blokady.html
+++ b/ekran_blokady.html
@@ -9,8 +9,17 @@
 <body>
 <div id="kontener_glowny">
 	<div id="kontener1"></div>
-	<div id="kontener2"></div>
-	<div id="kontener3"></div>
+	
+	<div id="kontener2">
+		<div id="wkontener2"><div id="obrazek">.</div>
+		<br>AkademiQ - RECEPCJA
+		<form action="...">
+		<input type="password" name="pin" />
+		</form></div>
+		
+	</div>
+	
+	<div id="kontener3">22:15<br>niedziela, 2 październik 2016</div>
 	
 </div>
 </body>
