--- a/ekran_blokady.html
+++ b/ekran_blokady.html
@@ -54,12 +54,12 @@ function wyswietlDane()
 	
 	<div id="kontener2">
 		<div id="wkontener2"><div id="obrazek"></div>
-		<br>AkademiQ - RECEPCJA
+		<br>AkademiQ - RECEPCJA - F1
 		<div id="pin"><div id="pin1">PIN</div>
 		<form action="...">
 		<input type="password" name="pin" />
 		</form>
-		<div id="pin2">></div></div></div></div>
+		<a href="#"><div id="pin2">></div></a></div></div></div>
 		
 	</div>
 	
