--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE HTML>
+<html lang="pl">
+<head>
+	<meta charset="utf-8" />
+	<title>Stylizowanie formularzy</title>
+	<meta name="description" content="Stylizowania elementów formularzy" />
+	<meta name="keywords" content="css" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		
+	<link rel="stylesheet" href="style.css" type="text/css" />
+	
+</head>
 
+<body>
+	
+</body>
+</html>
