--- a/ekran_blokady.html
+++ b/ekran_blokady.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head><title>wAkademiQ</title>
 <link rel="stylesheet" href="ekran_blokady.css" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Lato:400,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -56,10 +56,10 @@ function wyswietlDane()
 		<div id="wkontener2"><div id="obrazek"></div>
 		<br>AkademiQ - RECEPCJA - F1
 		<div id="pin"><div id="pin1">PIN</div>
-		<form action="...">
+		<form action="sum/logowanie_sum.php" method="post">
 		<input type="password" name="pin" />
-		</form>
-		<a href="#"><div id="pin2">></div></a></div></div></div>
+		<input type="submit" name="lol" value=">">
+		</form></div></div></div>
 		
 	</div>
 	
@@ -68,4 +68,3 @@ function wyswietlDane()
 </div>
 </body>
 </html>
-
