--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="logowanie.css" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Lato:400,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="Refresh" content="4; url=ekran_blokady.html" />
+<meta http-equiv="Refresh" content="4; url=logowanie.html" />
 <link rel="Shortcut icon" href="img/favicon.ico" />
 </head>
 
