--- a/panel.html
+++ b/panel.html
@@ -11,31 +11,31 @@
 <div id="panel">
 	<div id="panel_gora">
 	<div id="pasek1"></div>
-	<div id="pasek2"><img src="logo.png"></div>
+	<a href="panel.php"><div id="pasek2"><img src="logo.png"></div></a>
 	<div id="pasek3"></div>
-	<div id="pasek2"><img src="awatar3.png"> <a href="wylogowanie.html"> <img src="wylogoj.png"></a></div>
+	<div id="pasek2"><img src="awatar3.png"> <a href="wylogowanie.php"> <img src="wylogoj.png"></a></div>
 	<div id="pasek1"></div>
 	</div>
 	
 	<div id="panel_lewa">
 		<div id="menu">Mieszkańcy<div id="menu2">
-		<a href="#"><div id="przycisk_menu">Dodaj</div></a>
-		<a href="#"><div id="przycisk_menu">Edytuj</div></a>
-		<a href="#"><div id="przycisk_menu">Wymelduj</div></a>
-		<a href="#"><div id="przycisk_menu">Powiadom</div></a>
+		<a href="dodaj.php"><div id="przycisk_menu">Dodaj</div></a>
+		<a href="edytuj.php"><div id="przycisk_menu">Edytuj</div></a>
+		<a href="wymelduj.php"><div id="przycisk_menu">Wymelduj</div></a>
+		<a href="powiadom.php"><div id="przycisk_menu">Powiadom</div></a>
 		</div></div>
 		<div id="menu">Panel<div id="menu2">
-		<a href="#"><div id="przycisk_menu">Ustawienia</div></a>
-		<a href="serwis.html"><div id="przycisk_menu">Kontakt z serwis</div></a>
+		<a href="ustawienia.php"><div id="przycisk_menu">Ustawienia</div></a>
+		<a href="serwis.php"><div id="przycisk_menu">Kontakt z serwis</div></a>
 		</div></div>
 	</div>
 	
 	<div id="panel_prawa"><center>Panel główny<bR><br> &nbsp
 	
-	<a href="#"><div id="przycisk">Dodaj</div></a>
-	<a href="#"><div id="przycisk2">Edytuj</div></a>
-	<a href="#"><div id="przycisk3">Wymelduj</div></a>
-	<a href="#"><div id="przycisk4">Powiadom</div></a>
+	<a href="dodaj.php"><div id="przycisk">Dodaj</div></a>
+	<a href="edytuj.php"><div id="przycisk2">Edytuj</div></a>
+	<a href="wymelduj.php"><div id="przycisk3">Wymelduj</div></a>
+	<a href="powiadom.php"><div id="przycisk4">Powiadom</div></a>
 	
 	
 	
